tests/parsing/smtlib/v2.6/errors/057_declare-datatype_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/057_declare-datatype_unclosed_1.smt2", line 2, character 28-29:
2 | (declare-datatype foo ((A)) _)
                                ^
Error while parsing a datatype declaration, read the reserved word '_',
      but expected a closing parenthesis.
